[workspace]
members = []

[workspace.package]
version = "0.1.0"
authors = ["Carson Price"]
description = "A compiler for the Isotope programming language"
edition = "2021"
license-file = "LICENSE"

[package]
name = "isotope"
version.workspace = true
authors.workspace = true
license-file.workspace = true
description.workspace = true
readme = "README.md"
repository = "https://github.com/CPRocker/isotope/tree/main"
keywords = ["isotope", "compiler"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
regex = "1.10.3"
thiserror = "1.0"
