[workspace]
members = []

[workspace.package]
version = "0.1.0"
authors = ["Carson Price"]
description = "A compiler for the Isotope programming language"
edition = "2021"
license-file = "LICENSE"

[package]
name = "isotope"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository = "https://github.com/CPRocker/isotope/tree/main"
keywords = ["isotope", "compiler"]

[lib]
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0"
utf8-chars = "3.0.4"
